--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "bin2dec",
   "version": "0.0.0",
   "scripts": {
-    "heroku-postbuild": "ng build --prod",
+    "postinstall": "ng build --aot -prod",
     "ng": "ng",
     "start": "node server.js",
     "build": "ng build",
